Trigger localization of components externally instead of via events

--- a/src/pug/include/footer.pug
+++ b/src/pug/include/footer.pug
@@ -5,15 +5,11 @@
   //  a#backbutton.navbutton Previous Level
   //  a#nextbutton.navbutton Next Level
   .footerbox
-    #backbutton.button(data-i18n="main:slider.previous")
+    #backbutton.button
   .footerbox
     #navcircles.circles
-      a.circ(href="index.html#1").selected
-      a.circ(href="index.html#2")
-      a.circ(href="index.html#3")
-      a.circ(href="index.html#4")
   .footerbox
-    #nextbutton.button(data-i18n="main:slider.next")
+    #nextbutton.button
   //.footerbox(style="flex:0")
     //#creditsbutton.icon
     //#internationalbutton.icon
