Migrate DOM manipulations to jQuery
The regular Web API calls are just too verbose. While jQuery is quite
bloated, it reduces size of the projects code base quite a bit.

--- a/src/pug/sections/train.pug
+++ b/src/pug/sections/train.pug
@@ -21,8 +21,7 @@
 .box.trainingdata.visible
   div
     p(style="font-weight:600;")#training-data-title
-  div
-    table#trainingtable
+  div#training-table-container
   //.v-seperator
   div
     p Total error on training data (loss function):
