--- a/src/pug/sections/main.pug
+++ b/src/pug/sections/main.pug
@@ -1,7 +1,9 @@
 
 .network
   .text
-    h1#leveltitle Passe das Neuronale Netzwerk an
+    h1
+      span#leveltitleprefix
+      span#leveltitle Passe das Neuronale Netzwerk an
   include network
 .train
   include train
