Disable "next" button until level is soved
The implementation is quite dirty. Doing it properly would require quite
some refactoring.

--- a/src/pug/include/footer.pug
+++ b/src/pug/include/footer.pug
@@ -11,7 +11,7 @@
       a.circ(href="index.html#3")
       a.circ(href="index.html#4")
   .footerbox
-    #nextbutton.button
+    #nextbutton.button.disable
   //.footerbox(style="flex:0")
     //#creditsbutton.icon
     //#internationalbutton.icon
