--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -258,12 +258,16 @@ th {
   margin: 0px;
   pointer-events: all; }
 
-.button:hover {
+.button:not(.disable):hover {
   background: #EEEEEE; }
 
 .button.selected {
   font-weight: bold;
   background: #E1E1E1; }
+
+.button.disable {
+  border-color: rgba(0, 0, 0, 0.1);
+  color: rgba(0, 0, 0, 0.1); }
 
 /* The slider */
 /* Hide default HTML checkbox */
